--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,6 @@
 *.iml
 
 # OS-specific files
-.DS_Store
 .DS_Store?
 ._*
 .Spotlight-V100
@@ -43,3 +42,4 @@ local.properties
 
 # Android Studio Navigation editor temp files
 .navigation
+/gradlew
