--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
 
         </activity>
 
-        <activity android:name=".ui.activities.PersonInfoActivity"
+        <activity
+            android:name=".ui.activities.PersonInfoActivity"
             android:parentActivityName=".ui.activities.HouseListActivity">
 
         </activity>
